--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -366,7 +366,8 @@
                                 data-action="detail#closeLogboek">{% include "icons/close.svg" %}</button>
                         <div class="sidesheet-backdrop sidesheet-exit"
                             data-action="click->detail#closeLogboek"></div>
-                        <div class="content tijdlijn-container">
+                        <div class="content container__tijdlijn">
+                            <h2>Logboek</h2>
                             <section class=""
                                 data-testid="detailTijdlijn"
                                 id="melding_detail_tijdlijn">
