--- a/app/frontend/assets/styles/components/_sidesheet.scss
+++ b/app/frontend/assets/styles/components/_sidesheet.scss
@@ -77,7 +77,7 @@ body.show-logboek {
         z-index: 2105;
         background: transparent;
         top: 0.5rem;
-        right: calc($container-padding-x - 8px);
+        right: 12px;
         min-width: 20px;
         min-height: 20px;
     }
