--- a/app/frontend/assets/styles/components/_sidesheet.scss
+++ b/app/frontend/assets/styles/components/_sidesheet.scss
@@ -18,15 +18,82 @@ body.show-logboek {
     &.show {
         left: 0;
         backdrop-filter: blur(5px);
+        overflow-y: auto;
 
-        .turboframe-container,
-        .container__tijdlijn {
+        .container__logboek {
+            height: 90vh;
+            transform: translate3d(0, 0, 0);
+            transition:
+                transform $transition-duration-default $transition-ease-default,
+                height $transition-duration-default $transition-ease-default;
+            opacity: 1;
+
+            .content {
+                overflow-y: auto;
+            }
+
+            @media (min-width: map-get($grid-breakpoints, lg)) {
+                height: 100vh;
+                max-height: none;
+                &.closing {
+                    transform: translate3d(100%, 0, 0);
+                }
+            }
+        }
+        .turboframe-container {
             right: 0;
         }
     }
 
-    .turboframe-container,
-    .container__tijdlijn {
+    .container__logboek {
+        position: fixed;
+        box-sizing: border-box;
+        inset: auto 0 0 0; /* Zorgt ervoor dat de dialog onderaan blijft */
+        width: 100vw;
+        height: 0;
+        max-width: 100vw;
+        border: none;
+        border-radius: 12px 12px 0 0;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+        padding: 0;
+        background: #fff;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+        transform: translate3d(0, 100%, 0);
+        transition:
+            transform $transition-duration-default $transition-ease-default,
+            height $transition-duration-default $transition-ease-default;
+        display: flex;
+        flex-direction: column;
+        z-index: 3000;
+        opacity: 1;
+
+        header {
+            padding: 1rem;
+            border-bottom: 1px solid $blue-200;
+
+            h2 {
+                margin: 0;
+            }
+        }
+
+        section {
+            padding: 1rem;
+        }
+
+        @media (min-width: map-get($grid-breakpoints, lg)) {
+            inset: auto 0 0 auto;
+            width: 38%;
+            height: 100vh;
+            max-height: none;
+            border-radius: 0;
+            transform: translate3d(100%, 0, 0);
+            top: 0;
+        }
+    }
+
+    .turboframe-container {
         position: absolute;
         top: 0;
         right: -100%;
@@ -59,16 +126,6 @@ body.show-logboek {
                 flex: 0 0 auto;
                 vertical-align: middle;
                 margin-top: 3px;
-            }
-        }
-
-        p {
-            font-size: 0.7em;
-            line-height: 1.5em;
-
-            &.intro {
-                font-size: 0.8em;
-                line-height: 1.25em;
             }
         }
     }
