--- a/app/apps/main/templates/logboek/basis.html
+++ b/app/apps/main/templates/logboek/basis.html
@@ -1,4 +1,5 @@
 {% extends "infosheet/turbo.html" %}
+{% load humanize %}
 
 {% block header %}
     <div class="header">
@@ -14,7 +15,7 @@
 <ul>
     {% for logboek_groep in logboek.logboek_items_gegroepeerd %}
         <li>
-        {{logboek_groep.datum_verbose}}
+        {{logboek_groep.datum|naturalday:"j F Y"|capfirst}}
 
             <ul>
                 {% for logboek_item in logboek_groep.logboek_items %}
