Styling het logboek, inclusief iconen

--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -6,49 +6,60 @@
 <!-- djlint:on -->
 {% block content %}
 <div class="wrapper--actions">
-    {% if not melding.afgesloten_op %}
+
     <div class="container__uitklapper">
         <span data-testid="melding_handelingen_uitklapper">{% include "icons/dots.svg" %}</span>
         <div class="legenda">
             {% melding_taken melding as taak_info %}
-                <ul class="list-clean">
-                    <li>
-                        {% if perms.authorisatie.melding_pauzeren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
-                            <button type="button"
-                                    class="btn btn-icon"
-                                    data-action="modal#openModal"
-                                    data-modal-action-param="{% url 'melding_pauzeren' melding.uuid %}">
-                                    {% include "icons/pause_circle.svg" %}
-                                Melding pauzeren
-                            </button>
-                        {% endif %}
-                    </li>
-                    <li>
-                        {% if perms.authorisatie.melding_spoed_veranderen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
-                            <button type="button"
-                                    class="btn btn-icon"
-                                    data-action="modal#openModal"
-                                    data-modal-action-param="{% url 'melding_spoed_veranderen' melding.uuid %}">
-                                    {% include "icons/warning_triangle.svg" %}
-                                {% if melding.urgentie >= 0.5 %}Spoedstatus verwijderen{% else %}Spoedstatus toevoegen{% endif %}
-                            </button>
-                        {% endif %}
-                    </li>
-                    <li>
-                        {% if perms.authorisatie.melding_annuleren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
-                            <button type="button"
-                                    class="btn btn-icon"
-                                    data-action="modal#openModal"
-                                    data-modal-action-param="{% url 'melding_annuleren' melding.uuid %}">
-                                    {% include "icons/bin.svg" %}
-                                Melding annuleren
-                            </button>
-                        {% endif %}
-                    </li>
-                </ul>
+            <ul class="list-clean">
+                <li>
+                    <button type="button"
+                        class="btn btn-icon"
+                        data-action="infosheet#openInfosheet"
+                        data-infosheet-action-param="{% url 'logboek' melding.uuid %}"
+                    >
+                        {% include "icons/clock_ccw.svg" %}
+                        Toon logboek
+                    </button>
+                </li>
+                {% if not melding.afgesloten_op %}
+                <li>
+                    {% if perms.authorisatie.melding_pauzeren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
+                        <button type="button"
+                                class="btn btn-icon"
+                                data-action="modal#openModal"
+                                data-modal-action-param="{% url 'melding_pauzeren' melding.uuid %}">
+                                {% include "icons/pause_circle.svg" %}
+                            Melding pauzeren
+                        </button>
+                    {% endif %}
+                </li>
+                <li>
+                    {% if perms.authorisatie.melding_spoed_veranderen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
+                        <button type="button"
+                                class="btn btn-icon"
+                                data-action="modal#openModal"
+                                data-modal-action-param="{% url 'melding_spoed_veranderen' melding.uuid %}">
+                                {% include "icons/warning_triangle.svg" %}
+                            {% if melding.urgentie >= 0.5 %}Spoedstatus verwijderen{% else %}Spoedstatus toevoegen{% endif %}
+                        </button>
+                    {% endif %}
+                </li>
+                <li>
+                    {% if perms.authorisatie.melding_annuleren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
+                        <button type="button"
+                                class="btn btn-icon"
+                                data-action="modal#openModal"
+                                data-modal-action-param="{% url 'melding_annuleren' melding.uuid %}">
+                                {% include "icons/bin.svg" %}
+                            Melding annuleren
+                        </button>
+                    {% endif %}
+                </li>
+                {% endif %}
+            </ul>
         </div>
     </div>
-    {% endif %}
     {% if perms.authorisatie.melding_hervatten and melding.status.naam == "pauze" or melding.status.naam == "wachten_melder" %}
         <button type="button"
                 class="btn btn-tertiary"
