--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -484,7 +484,7 @@ textarea {
 .link--back,
 .btn.btn-icon {
     svg {
-        vertical-align: sub;
+        vertical-align: text-bottom;
         margin-right: 5px;
     }
 
