--- a/app/apps/main/templates/logboek/basis.html
+++ b/app/apps/main/templates/logboek/basis.html
@@ -12,21 +12,26 @@
 {% endblock header %}
 
 {% block content %}
-<ul>
-    {% for logboek_groep in logboek.logboek_items_gegroepeerd %}
-        <li>
-        {{logboek_groep.datum|naturalday:"j F Y"|capfirst}}
-
-            <ul>
-                {% for logboek_item in logboek_groep.logboek_items %}
-                    <li>
-                        {{logboek_item.titel}}
-                        {{logboek_item.render_icon}}
-                        {{logboek_item.render_content}}
-                    </li>
-                {% endfor %}
-            </ul>
-        </li>
-    {% endfor %}
-</ul>
+<section class="content container__logboek"
+    data-testid="detailTijdlijn"
+    id="melding_detail_tijdlijn">
+        <ul class="list-clean">
+            {% for logboek_groep in logboek.logboek_items_gegroepeerd %}
+                <li class="group">
+                    <h3>{{logboek_groep.datum|naturalday:"j F Y"|capfirst}}</h3>
+                    <ul class="list-clean">
+                        {% for logboek_item in logboek_groep.logboek_items %}
+                            <li>
+                                {{logboek_item.render_icon}}
+                                <div class="message haai">
+                                    <h4>{{logboek_item.titel}}</h4>
+                                    {{logboek_item.render_content}}
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </li>
+            {% endfor %}
+        </ul>
+    </section>
 {% endblock content %}
