--- a/app/frontend/assets/styles/components/_infosheet.scss
+++ b/app/frontend/assets/styles/components/_infosheet.scss
@@ -71,10 +71,10 @@ dialog.infosheet {
     }
 
     .header {
-        padding: 28px 16px 0;
+        padding: 18px 18px;
         border-bottom: 1px solid $blue-200;
         h1 {
-            margin-top: 0;
+            margin: 0;
             padding-right: 1em;
             font-size: 1.375rem;
             word-break: break-word;
