Removed seconds from time, Added full_name

--- a/app/apps/main/templates/logboek/content/standaard.html
+++ b/app/apps/main/templates/logboek/content/standaard.html
@@ -1,7 +1,11 @@
 {% load mor_core_url from main_tags %}
 {% load get_gebruiker_object_middels_email from gebruikers_tags %}
 {% if omschrijving_intern and titel != omschrijving_intern %}<p>{{ omschrijving_intern }}</p>{% endif %}
-<small>Om {{ tijd }} uur{% if gebruiker %} door <a href="" data-action="modal#openModal" data-modal-action-param="{% url 'gebruiker_info' gebruiker_email=gebruiker %}">{{ gebruiker }}</a>{% endif %}</small>
+{% with gebruiker_object=gebruiker|get_gebruiker_object_middels_email %}
+<small>
+    Om {{ tijd }} uur{% if gebruiker %} door <a href="" data-action="modal#openModal" data-modal-action-param="{% url 'gebruiker_info' gebruiker_email=gebruiker %}">{{ gebruiker_object.full_name }}</a>{% endif %}
+</small>
+{% endwith %}
 
 {% if bijlagen|length > 0 %}
     <div class="container__thumbs">
