Stylingfixes melding afhandelen

--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -12,7 +12,7 @@
 </turbo-stream>
 <turbo-stream target="modal_body" action="update">
 <template>
-    <section class="section--separated padding-bottom-0" data-testid="detailReporter">
+    <section class="" data-testid="detailReporter">
             <form action="{% url 'melding_afhandelen' melding.uuid %}"
                   method="post"
                   class=""
