--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -190,8 +190,8 @@ textarea {
 
     &-close {
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 10px;
+        top: 18px;
         padding: 8px;
         margin: 0 0 0 auto;
         box-shadow: none;
