--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -75,6 +75,9 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div id="melding_detail_status">
+                                    {% include "melding/detail/status.html" %}
+                                </div>
                                 <div id="melding_detail_taken">
                                     {% include "melding/detail/taken.html" %}
                                 </div>
