Cssfix size radiobutton

--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -264,6 +264,8 @@ textarea {
         margin-left: 0;
         margin-top: 0.15rem;
         vertical-align: text-top;
+        width: 0.778rem;
+        height: 0.778rem;
     }
 
     &:checked[type="radio"] {
