--- a/app/frontend/assets/styles/components/_incident-details-blocks.scss
+++ b/app/frontend/assets/styles/components/_incident-details-blocks.scss
@@ -245,10 +245,17 @@
             .initials {
                 flex: 0 0 auto;
                 margin-right: 0.444rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                line-height: normal;
             }
 
             .message {
                 flex: 1;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
 
                 h4,
                 p {
@@ -367,6 +374,10 @@
     .container__content {
         h3 {
             color: inherit;
+        }
+
+        .content {
+            display: flex;
         }
 
         .container__overflow {
