--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -94,7 +94,7 @@
                                 </span>
                                 Er zijn geen standaard externe omschrijvingen ingesteld voor deze specificatie!<br>
                                 Vraag een functioneelbeheerder om deze aan te maken.<br>
-                                Je kan wel gewoon de melding afhandelen met deze specificatie met een eigen externe omschrijvingen.
+                                Je kan wel gewoon de melding afhandelen met deze specificatie met een eigen externe omschrijving.
                             </div>
                             <div class="form-control__with-helptext js-validation margin-top">{{ form.omschrijving_extern|render_rotterdam_formulier }}</div>
                         </fieldset>
