--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -32,3 +32,4 @@
 @import "./components/sidesheet";
 @import "./components/content-taakr";
 @import "./components/details-list-with-map";
+@import "./components/page-unauthorized";
