--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -775,7 +775,8 @@ body.no-js {
     background-color: $gray-tint01;
 }
 
-.green {
+.green,
+.color--primary {
     color: $green-tint01;
 }
 .nowrap {
