Styling authorized parts

--- a/app/frontend/assets/styles/components/_page-unauthorized.scss
+++ b/app/frontend/assets/styles/components/_page-unauthorized.scss
@@ -94,6 +94,11 @@
             top: 1rem;
             left: 1rem;
         }
+
+        .container__details {
+            max-width: 355px;
+            margin: 0 auto;
+        }
     }
 
     @media (min-width: map-get($grid-breakpoints, md)) {
